Customizations for DotOS 6.0 Beta
Signed-off-by: IacobIonut01 <paulionut2003@gmail.com>
Change-Id: I079c2fe5468bfb3330c5f80fb2d9a6fb17edb3b7